testsuite/tests/parser/should_fail/patFail011.hs
module PatFail011 where

f (a{}) = ()
