testsuite/tests/parser/should_fail/patFail011.stderr
patFail011.hs:3:4: error: [GHC-08195] Not a record constructor: a

